Added - jockey wrapper styles and slide navigation Next button

--- a/index.html
+++ b/index.html
@@ -5,19 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/favicon.svg" />
+    <!-- <link rel="icon" type="image/x-icon" href="/favicon.svg" /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap"
       rel="stylesheet"
     />
-    <title>Racing Post Jockey app</title>
+    <title>app</title>
   </head>
   <body>
-    <header>
+    <!-- HEADER / NAV -->
+    <!-- <header>
       <nav>
         <img id="logo" src="logo.png" alt="Racing Post logo" />
         <a href="https://www.racingpost.com/" target="_blank">Contact</a>
       </nav>
-    </header>
+    </header> -->
+
+    <!-- MAIN SECTION -->
+    <main>
+        <!-- JOCKEY WRAPPER -->
+      <section class="jockey-wrapper flex">
+        <div class="copy">
+          <h1>Front Plank</h1>
+        </div>
+        <div class="image">
+          <img class="jockey-img" src="1.jpg" alt="" />
+        </div>
+        <div class="functionality">
+          <button>
+            <h2>SCORE 1</h3>
+            <span>0s - 120s</span>
+          </button>
+          <button>
+            <h2>SCORE 2</h2>
+            <span>0s - 120s</span>
+          </button>
+          <button>
+            <h2>SCORE 3</h2>
+            <span>0s - 120s</span>
+          </button>
+        </div>
+        <div class="tip">
+          <p>
+            TIP: Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
+            voluptatem.
+          </p>
+        </div>
+        <div class="score">
+          <h3>SCORE: <span></span></h3>
+        </div>
+      </section>
+
+      <!-- SLIDE NAVIGATION -->
+      <section class="slide-navigation">
+          <button class="next">Next</button>
+      </section>
+
+    </main>
   </body>
 </html>
