Added - JS selectors

--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
         <!-- JOCKEY WRAPPER -->
       <section class="jockey-wrapper flex">
         <div class="copy">
-          <h1>Front Plank</h1>
+          <h1 class="exercise-title">Front Plank</h1>
         </div>
         <div class="image">
-          <img class="jockey-img" src="1.jpg" alt="" />
+          <img class="exercice-img" src="1.jpg" alt="" />
         </div>
         <div class="functionality">
-          <button>
-            <h2>SCORE 1</h3>
-            <span>0s - 120s</span>
+          <button class="score1">
+            <h2 class="score-1-title">SCORE 1</h3>
+            <span class="score-1-span">0s - 120s</span>
           </button>
           <button>
-            <h2>SCORE 2</h2>
-            <span>0s - 120s</span>
+            <h2 class="score-2-title">SCORE 2</h2>
+            <span class="score-2-span">0s - 120s</span>
           </button>
           <button>
-            <h2>SCORE 3</h2>
-            <span>0s - 120s</span>
+            <h2 class="score-3-title">SCORE 3</h2>
+            <span class="score-3-span">0s - 120s</span>
           </button>
         </div>
         <div class="tip">
-          <p>
+          <p class="tip-text">
             TIP: Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
             voluptatem.
           </p>
@@ -62,5 +62,12 @@
       </section>
 
     </main>
+
+
+
+
+
+
+    <script src="app.js"></script>
   </body>
 </html>
