Added - Point functionality

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <!-- MAIN SECTION -->
     <main>
-        <!-- JOCKEY WRAPPER -->
-      <section class="jockey-wrapper flex-column">
+        <!-- EXERCISE WRAPPER -->
+      <section class="exercise-wrapper flex-column">
         <div class="copy">
           <h1 class="exercise-title">Front Plank</h1>
         </div>
@@ -37,29 +37,24 @@
             <span>TIP:</span> Engage your core and make sure you stay in a straight line</p>
         </div>
         <div class="functionality">
-          <button class="score1">
-            <h2 class="point-1">1 Point</h3>
+          <button class="point-btn1">
+            <h2>1 Point</h2>
             <span class="point-1-span">0-120 secs</span>
           </button>
-          <button>
-            <h2 class="point-2">2 Points</h2>
+          <button class="point-btn2">
+            <h2>2 Points</h2>
             <span class="point-2-span">121-210 secs</span>
           </button>
-          <button>
-            <h2 class="point-3">3 Points</h2>
+          <button class="point-btn3">
+            <h2>3 Points</h2>
             <span class="point-3-span">211+ secs</span>
           </button>
         </div>
-        <div class="score">
-          <h3>SCORE: <span class="score-value">0</span></h3>
+        <div class="score-card">
+          <h3>SCORE: <span class="score">0</span></h3>
         </div>
+        <button class="next-btn">Next</button>
       </section>
-
-      <!-- SLIDE NAVIGATION -->
-      <section class="slide-navigation">
-        <button class="next">Next</button>
-      </section>
-    </main>
 
     <!-- FOOTER -->
     <footer>
