--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
         <div class="score-card">
           <h3>SCORE: <span class="score">0</span></h3>
         </div>
-        <button class="next-btn">Next</button>
+        <div class="exercise-navigation flex-row">
+        <button class="exercise2-btn exercise-btn">Exercise 2</button>
+        <button class="exercise3-btn exercise-btn">Exercise 3</button>
+        <button class="exercise4-btn exercise-btn">Exercise 4</button>
+        <button class="exercise5-btn exercise-btn">Exercise 5</button>
+        <button class="results-btn exercise-btn">RESULTS</button>
+        
+      </div>
       </section>
 
     <!-- FOOTER -->
