Added - responsive on exercise's title and tip's title

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
             <span>TIP:</span> Engage your core and make sure you stay in a straight line</p>
         </div>
         <div class="functionality">
-          <button class="point-btn1">
+          <button class="point-btn point-btn1">
             <h2>1 Point</h2>
             <span class="point-1-span">0-120 secs</span>
           </button>
-          <button class="point-btn2">
+          <button class="point-btn point-btn2">
             <h2>2 Points</h2>
             <span class="point-2-span">121-210 secs</span>
           </button>
-          <button class="point-btn3">
+          <button class="point-btn point-btn3">
             <h2>3 Points</h2>
             <span class="point-3-span">211+ secs</span>
           </button>
