Added - responsive and different font family on Tip paragraph

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="copy">
           <p class="tip">
-            <span>TIP:</span> Engage your core and make sure you stay in a straight line</p>
+            Engage your core and make sure you stay in a straight line</p>
         </div>
         <div class="functionality">
           <button class="point-btn point-btn1">
