Added - needs improvement page / Added - reset app functionality

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <button class="exercise4-btn exercise-btn">Exercise 4</button>
         <button class="exercise5-btn exercise-btn">Exercise 5</button>
         <button class="results-btn exercise-btn">RESULTS</button>
-        <!-- <button class="reset-btn exercise-btn">RESET</button> -->
+        <button class="reset-btn exercise-btn">RESET</button>
       </div>
       </section>
 
