--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
   <body>
     <!-- HEADER / NAV -->
-    <!-- <header>
+    <header>
       <nav>
         <a class="logo-link" href="https://www.racingpost.com/" target="_blank"><img id="logo" src="logo.png" alt="Racing Post logo" /></a>
-        <a href="https://help.racingpost.com/hc/en-us/requests/new" target="_blank">Contact</a>
+        <a class="contact-btn"href="https://help.racingpost.com/hc/en-us/requests/new" target="_blank">Contact</a>
       </nav>
-    </header> -->
+    </header>
 
     <!-- MAIN SECTION -->
     <main>
@@ -62,7 +62,7 @@
       </section>
 
     <!-- FOOTER -->
-    <!-- <footer>
+    <footer>
       <div class="footer-wrapper flex-column">
         <img src="/logo.png" alt="Racing Post logo">
         <ul class="social flex-row">
@@ -84,7 +84,7 @@
             </p>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <script src="app.js"></script>
   </body>
