Updated - img link path, Homepage's Title /  Added - comments

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS File -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/favicon.svg" />
-    
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.svg" />
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;700&family=Roboto:wght@100;300;700&display=swap" rel="stylesheet">
-    <title>app</title>
+    <title>The Racing Post Jockey Challenge App</title>
   </head>
   <body>
     <!-- HEADER / NAV -->
@@ -27,7 +29,7 @@
           <h1 class="exercise-title">Front Plank</h1>
         </div>
         <div class="image">
-          <img id="exercice-img" src="/img/1image-front-plank.jpg" alt="" />
+          <img id="exercice-img" src="img/1image-front-plank.jpg" alt="" />
         </div>
         <div class="copy">
           <p class="tip">
@@ -64,14 +66,14 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer-wrapper flex-column">
-        <img src="/logo.png" alt="Racing Post logo">
+        <img src="logo.png" alt="Racing Post logo">
         <ul class="social flex-row">
-          <li><a href="https://www.instagram.com/racingpost/"><img src="/icons/instagram.svg" alt="Instagram logo"></a></li>
-          <li><a href="https://twitter.com/racingpost"><img src="/icons/twitter.svg" alt="Twitter logo"></a></li>
-          <li><a href="https://www.youtube.com/user/racingpostdotcom"><img src="/icons/youtube.svg" alt="Youtube logo"></a></li>
-          <li><a href="https://open.spotify.com/show/2u42zu7lk0seljo2zBRpti"><img src="/icons/spotify.svg" alt="Spotify logo"></a></li>
-          <li><a href="https://www.messenger.com/login.php?next=https%3A%2F%2Fwww.messenger.com%2Ft%2F189008416119%2F%3Fmessaging_source%3Dsource%253Apages%253Amessage_shortlink%26source_id%3D1441792"><img src="/icons/messenger.svg" alt="Messenger logo"></a></li>
-          <li><a href="https://www.facebook.com/racingpost"><img src="/icons/facebook.svg" alt="Facebook logo"></a></li>
+          <li><a href="https://www.instagram.com/racingpost/"><img src="icons/instagram.svg" alt="Instagram logo"></a></li>
+          <li><a href="https://twitter.com/racingpost"><img src="icons/twitter.svg" alt="Twitter logo"></a></li>
+          <li><a href="https://www.youtube.com/user/racingpostdotcom"><img src="icons/youtube.svg" alt="Youtube logo"></a></li>
+          <li><a href="https://open.spotify.com/show/2u42zu7lk0seljo2zBRpti"><img src="icons/spotify.svg" alt="Spotify logo"></a></li>
+          <li><a href="https://www.messenger.com/login.php?next=https%3A%2F%2Fwww.messenger.com%2Ft%2F189008416119%2F%3Fmessaging_source%3Dsource%253Apages%253Amessage_shortlink%26source_id%3D1441792"><img src="icons/messenger.svg" alt="Messenger logo"></a></li>
+          <li><a href="https://www.facebook.com/racingpost"><img src="icons/facebook.svg" alt="Facebook logo"></a></li>
         </ul>
         <div class="copy">
           <p>Bets are accepted in accordance with the operator's rules.</p>
