Fixed - responsive issue on footer

--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
     <footer>
       <div class="footer-wrapper flex-column">
         <img src="logo.png" alt="Racing Post logo">
-        <ul class="social flex-row">
-          <li><a href="https://www.instagram.com/racingpost/"><img src="icons/instagram.svg" alt="Instagram logo"></a></li>
-          <li><a href="https://twitter.com/racingpost"><img src="icons/twitter.svg" alt="Twitter logo"></a></li>
-          <li><a href="https://www.youtube.com/user/racingpostdotcom"><img src="icons/youtube.svg" alt="Youtube logo"></a></li>
-          <li><a href="https://open.spotify.com/show/2u42zu7lk0seljo2zBRpti"><img src="icons/spotify.svg" alt="Spotify logo"></a></li>
-          <li><a href="https://www.messenger.com/login.php?next=https%3A%2F%2Fwww.messenger.com%2Ft%2F189008416119%2F%3Fmessaging_source%3Dsource%253Apages%253Amessage_shortlink%26source_id%3D1441792"><img src="icons/messenger.svg" alt="Messenger logo"></a></li>
-          <li><a href="https://www.facebook.com/racingpost"><img src="icons/facebook.svg" alt="Facebook logo"></a></li>
-        </ul>
+        <div class="social flex-row">
+          <a href="https://www.instagram.com/racingpost/"><img src="icons/instagram.svg" alt="Instagram logo"></a>
+          <a href="https://twitter.com/racingpost"><img src="icons/twitter.svg" alt="Twitter logo"></a>
+          <a href="https://www.youtube.com/user/racingpostdotcom"><img src="icons/youtube.svg" alt="Youtube logo"></a>
+          <a href="https://open.spotify.com/show/2u42zu7lk0seljo2zBRpti"><img src="icons/spotify.svg" alt="Spotify logo"></a>
+          <a href="https://www.messenger.com/login.php?next=https%3A%2F%2Fwww.messenger.com%2Ft%2F189008416119%2F%3Fmessaging_source%3Dsource%253Apages%253Amessage_shortlink%26source_id%3D1441792"><img src="icons/messenger.svg" alt="Messenger logo"></a>
+          <a href="https://www.facebook.com/racingpost"><img src="icons/facebook.svg" alt="Facebook logo"></a>
+        </div>
         <div class="copy">
           <p>Bets are accepted in accordance with the operator's rules.</p>
-            <p>William Hill is licensed and regulated by the UK Gambling Commission no. 000-039225 R-319373-001</p>
+            <p>William Hill is licensed and regulated by the UK Gambling Commission.</p>
             <p>The registered office of William Hill is at 6/1 Waterport Place, Gibraltar, with registered company number 99191.</p>
             <p>
             William Hill is committed to supporting Responsible Gambling
-          <p><p>
+            </p><p>
             If you click on a link on this site which takes you to a bookmaker or casino and you subsequently open an account, Racingpost may receive a commission.
             </p>
         </div>
